updated client app with fixing alignments issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5372,8 +5372,9 @@ button.bg-light:hover,
 button.bg-light:focus {
 background-color: #dae0e5 !important; }
 
-.bg-dark {
-background-color: #343a40 !important; }
+// .bg-dark {
+// background-color: #343a40 !important; 
+// }
 
 a.bg-dark:hover, a.bg-dark:focus,
 button.bg-dark:hover,
